Fix for the print styles, the popup style now not only works in the emulated styles but also in the print preview and print.
This commit also contains a fix for the SVG 'named circle' that was displayed too big

--- a/web-ui/src/main/resources/catalog/style/gn_metadata.less
+++ b/web-ui/src/main/resources/catalog/style/gn_metadata.less
@@ -634,11 +634,16 @@ ul.container-list {
         padding: 5px;
       }
       @media print {
+        svg {
+          max-width: 75px;
+          margin: 15px;
+        }
         [gn-popover-content] {
           .make-md-column-offset(3);
           padding: 0 @gn-spacing-lg;
           display: block !important;
-          label, a {
+          label,
+          a {
             display: block;
             margin-bottom: @gn-spacing;
           }
